	* doc/tcltest.n:
	* library/tcltest1.0/tcltest.tcl: Removed the extra return at the
	end of the tcltest.tcl file, added version information about tcl.

	Applied patches sent in by Andreas Kupries to add helper procs for
	debug output, add 3 new flags (-testsdir, -load, -loadfile), and
	internally refactors common code for dealing with paths into
	separate procedures. [Bug: 2838, 2842]

	* tests/autoMkindex.test:
	* tests/pkgMkIndex.test: Explicitly cd to
	::tcltest::testsDirectory at the beginning of the test run

	* tests/basic.test: Use version information defined in tcltest
	instead of hardcoded version number

	* tests/socket.test: package require tcltest before attempting to
	use variable defined in tcltest namespace

	* tests/unixInit.test: 
	* tests/unixNotfy.test: Added explicit exits needed to avoid
	problems when the tests area run in wish.
	
1999-10-12  Jim Ingham  <jingham@scriptics.com>

        * mac/tclMacLoad.c: Stupid bug - we converted the filename to
        external, but used the unconverted version.
        * mac/tclMacFCmd.c: Fix a merge error in the bug fix for [Bug: 2869]

1999-10-12  Jeff Hobbs  <hobbs@scriptics.com>

	* generic/regc_color.c:
	* generic/regc_cvec.c:
	* generic/regc_lex.c:
	* generic/regc_locale.c:
	* generic/regcomp.c:
	* generic/regcustom.h:
	* generic/regerrs.h:
	* generic/regex.h:
	* generic/regexec.c:
	* generic/regguts.h:
	* generic/tclRegexp.c:
	* generic/tclTest.c:
	* tests/reg.test: updated to Henry Spencer's new regexp engine
	(mid-Sept 99).  Should greatly reduce stack space reqs.

	* library/tcltest1.0/pkgIndex.tcl: fixed procs in pkgIndex.tcl file

	* generic/tclEnv.c: fixed mem leak with putenv and DStrings
	* doc/Encoding.3: corrected docs
	* tests/basic.test: updated test cases for 8.3
	* tests/encoding.test: fixed test case that change system
	encoding to a double-byte one (this causes a bogus mem read
	error for purify)
	* unix/Makefile.in: purify has to use -best-effort to instrument